# Algorithms_and_Datastructures

./: .gitignore  README.md  Usage.md
blatt2/exercises/: blatt2.cpp
blatt3/: main.cpp
blatt4/include/: blatt4.h
exercise1/: CMakeLists.txt  main.cpp
exercise1/exercises/: blatt1.cpp
exercise2/: main.cpp
exercise3/: main.cpp
exercise3/exercises/: blatt3.cpp
exercise3/tests/: blatt3test.cpp
exercise4/: CMakeLists.txt  main.cpp
exercise4/exercises/: blatt4.cpp
exercise5/: CMakeLists.txt  main.cpp
exercise6/: CMakeLists.txt
exercise7/: main.cpp
exercise8/: main.cpp
exercise9/: CMakeLists.txt  main.cpp
exercise_files(to_work_on)/exercise12/: CMakeLists.txt  main.cpp
exercise_files(to_work_on)/exercise12/include/googletest/googlemock/include/gmock/: gmock-more-matchers.h
exercise_files(to_work_on)/exercise12/include/googletest/googletest/include/gtest/: gtest-death-test.h  gtest-spi.h
exercise_files(to_work_on)/exercise12/include/googletest/googletest/include/gtest/internal/: gtest-death-test-internal.h
exercise_files(to_work_on)/exercise12/include/googletest/googletest/src/: gtest-printers.cc
exercise_files(to_work_on)/exercise7/: CMakeLists.txt
exercise_files(to_work_on)/exercise7/include/googletest/googlemock/include/gmock/: gmock-spec-builders.h
exercise_files(to_work_on)/exercise7/include/googletest/googlemock/src/: gmock-spec-builders.cc
exercise_files(to_work_on)/exercise7/include/googletest/googlemock/test/: BUILD.bazel
exercise_files(to_work_on)/exercise7/include/googletest/googletest/src/: gtest-test-part.cc
exercise_solutions(files:sheets)/exercise3/src_exercise3/: CMakeLists.txt
(+130 files in other folders)
